--- a/Readme
+++ b/Readme
@@ -1,2 +1,4 @@
 
 Read the documentaion in widgets/ex11.html
+
+To help create new widgets there is a small program in util to convert DXF-files to erlang ex11 drawing primitives. Draw your graphics in a CAD system and save as DXF. Convert the DXF file with dxf2erl:start("clock.dxf"). from the erlang console. There is a sample DXF file in util as well as a demo widget made up from the clock.dxf file.
