info about installation

--- a/Readme
+++ b/Readme
@@ -7,6 +7,7 @@ The DXF file can be created in QCAD (free) http://www.ribbonsoft.com/en/ , AUTOC
 
 
 Install with a fresh Raspbian Jessie Light: (If you already have xserver and erlang installed, skip those steps).
+# Erlang
 sudo apt-get update
 sudo apt-get install wget
 sudo apt-get install libssl-dev
@@ -20,18 +21,22 @@ sudo make install
 cd ..
 sudo rm -R otp_src_18.2.1/
 
-sudo apt-get install git
-git clone https://github.com/skvamme/ex11.git
-sudo apt-get install libjpeg8-dev
+# xserver
 sudo apt-get install xserver-xorg
 sudo Xorg &
 (press enter and you will get the command prompt back)
+
+# ex11
+sudo apt-get install git
+git clone https://github.com/skvamme/ex11.git
+sudo apt-get install libjpeg8-dev
 xauth
 add :0 . ab12cd34ef56fe78dc90ba1a2b3c4d5e6f
 exit
-
 cd ex11
 make
+
+
 
 Compile util with:
 erlc -I ../lib *.erl
