--- a/Readme
+++ b/Readme
@@ -22,7 +22,7 @@ sudo rm -R otp_src_18.2.1/
 
 # xserver
 sudo apt-get install xserver-xorg
-sudo Xorg &
+sudo Xorg -s 0 dpms &
 (press enter and you will get the command prompt back)
 
 # ex11
