--- a/Readme
+++ b/Readme
@@ -1,11 +1,13 @@
-This ex11 will be tailored to fit Raspberry Pi. Sometimes you don't need a full fledged window manager when you just want to display a sensor value or a couple of push buttons and a slider on a 5" screen.
+This ex11 will be tailored to fit Raspberry Pi, however most linux distributions will do if you replace the apt-get command with the corresponding one for your distribution.
 
-To help create new widgets there is a small program in util to convert DXF-files to erlang ex11 drawing primitives. Draw your graphics in a CAD system and save as DXF. Convert the DXF file with dxf2erl:start("clock.dxf"). from the erlang console. There is a sample DXF file in util as well as a demo widget made up from the clock.dxf file.
+Sometimes, when you don't need a full fledged window manager but just want to display a sensor value or a couple of push buttons and a slider on a 5" screen, then try this all erlang graphics X11 library for your raspberry pi erlang project. You get soft realtime animations. Concurrency between 2 or more widgets on screen. Custom widgets, show what you can draw. Lots of free DXF graphics and symbol libraries on the internet to download and convert to ex11 with the included dxf2erl utility.
 
-The DXF file can be created in QCAD (free) http://www.ribbonsoft.com/en/ , AUTOCAD and other CAD systems. Entities with higher thickness will be drawn last. Closed polylines will be filled areas.
+To help create new widgets there is a small program in util to convert DXF-files to erlang ex11 drawing primitives. Download or draw your own graphics in a CAD system and save as DXF. Convert the DXF file with dxf2erl:start("filename.dxf"). from the erlang console. There is a sample DXF file in util as well as a demo widget made up from the clock.dxf file. You can even load the clock.dxf file into a CAD system and change, scale and rotate the graphics and save it into a new DXF file.
+
+The DXF file can be created in QCAD (free) http://www.ribbonsoft.com/en/ , AUTOCAD and other CAD systems. Entities with higher thickness will be drawn last. Closed polylines will be filled areas in ex11.
 
 
-Install with a fresh Raspbian Jessie Light: (If you already have xserver and erlang installed, skip those steps).
+Install with a fresh Raspbian (even Light will do). If you already have xserver and erlang installed, skip those steps:
 # Erlang
 sudo apt-get update
 sudo apt-get install wget
@@ -31,6 +33,7 @@ git clone https://github.com/skvamme/ex11.git
 sudo apt-get install libjpeg8-dev
 xauth
 add :0 . ab12cd34ef56fe78dc90ba1a2b3c4d5e6f
+(If there is any chance your system could be hacked, replace at least one of the random characters above)
 exit
 cd ex11
 make
