--- a/Readme
+++ b/Readme
@@ -1,6 +1,6 @@
 This ex11 will be tailored to fit Raspbian on Raspberry Pi, however most linux distributions will do if you only replace the apt-get command with the corresponding one for your distribution.
 
-Sometimes, when you don't need a full fledged window manager but just want to display a sensor value or a couple of push buttons and a slider on a 5" screen, then try this all erlang graphics X11 library for your raspberry pi erlang project. You get soft realtime animations. Concurrency between 2 or more widgets on screen. Custom widgets, show what you can draw. Lots of free DXF and Google Sketchup graphics and symbol libraries on the internet to download and convert from DXF to ex11 with the included dxf2erl utility.
+Sometimes, when you don't need a full fledged window manager but just want to display a sensor value or a couple of push buttons and a slider on a 5" screen, then try this all erlang graphics X11 library for your raspberry pi erlang project. You get soft realtime animations. Concurrency between 2 or more widgets on screen. Hot code loading, you can update the GUI from your PC while your embedded raspi system is running. Custom widgets, show what you can draw. Lots of free DXF and Google Sketchup graphics and symbol libraries on the internet to download and convert from DXF to ex11 with the included dxf2erl utility.
 
 To help create new widgets there is a small program in util to convert DXF-files to erlang ex11 drawing primitives. Download or draw your own graphics in a CAD system and save as DXF. Convert the DXF file with dxf2erl:start("filename.dxf"). from the erlang console. There is a sample DXF file in util as well as a demo widget made up from the clock.dxf file. You can even load the clock.dxf file into a CAD system and change, scale and rotate the graphics and save it into a new DXF file.
 
