--- a/Readme
+++ b/Readme
@@ -1,4 +1,4 @@
-This ex11 will be tailored to fit Raspbian on Raspberry Pi, however most linux distributions will do if you only replace the apt-get command with the corresponding one for your distribution. Read more about Erlang on Raspberry Pi at http://elinux.org/Erlang
+This ex11 will be tailored to fit Raspbian on Raspberry Pi, however most linux distributions will do if you only replace the apt-get command with the corresponding one for your distribution. Read more about Erlang on Raspberry Pi at my elinux page http://elinux.org/Erlang
 
 Sometimes, when you don't need a full fledged window manager but just want to display a sensor value or a couple of push buttons and a slider on a 5" screen, then try this all erlang graphics X11 library for your raspberry pi erlang project. You get soft realtime animations. Concurrency between 2 or more widgets on screen. Hot code loading, you can update the GUI from your PC while your embedded raspi system is running. Custom widgets, show what you can draw. Lots of free DXF and Google Sketchup graphics and symbol libraries on the internet to download and convert from DXF to ex11 with the included dxf2erl utility.
 
